src/snapshots/alma__infer__tests__infer_expr-22.snap
---
source: src/infer.rs
expression: "infer(r#\"{ age = 1, msg = \"Hello\" }.age\"#)"

---
Input:

{ age = 1, msg = "Hello" }.age

---
Output:

Float
