src/snapshots/alma__infer__tests__infer_expr-23.snap
---
source: src/infer.rs
expression: "infer(r#\"{ age = 1, msg = \"Hello\" }.msg\"#)"

---
Input:

{ age = 1, msg = "Hello" }.msg

---
Output:

String
