src/snapshots/alma__infer__tests__infer_expr-24.snap
---
source: src/infer.rs
expression: "infer(r#\"{ age = 1, msg = \"Hello\" }.wat\"#)"

---
Input:

{ age = 1, msg = "Hello" }.wat

---
Output:

[1:0]

Type mismatch:  { age : Float, msg : String }  ≠  { a | wat : b }

Expected

  1│  { age = 1, msg = "Hello" }.wat
   │  ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑

to be

{ a | wat : b }

but seems to be

{ age : Float, msg : String }
