src/snapshots/alma__infer__tests__infer_expr-25.snap
---
source: src/infer.rs
expression: "infer(r#\"let a = \"Hi\" in a.wat\"#)"

---
Input:

let a = "Hi" in a.wat

---
Output:

[1:16]

Type mismatch:  String  ≠  { a | wat : b }

Expected

  1│  let a = "Hi" in a.wat
   │                  ↑

to be

{ a | wat : b }

but seems to be

String
