src/snapshots/alma__infer__tests__infer_expr-26.snap
---
source: src/infer.rs
expression: "infer(\".name\")"

---
Input:

.name

---
Output:

{ a | name : b } -> b
