src/snapshots/alma__infer__tests__infer_expr-27.snap
---
source: src/infer.rs
expression: "infer(\".name { name = 1 }\")"

---
Input:

.name { name = 1 }

---
Output:

Float
