src/snapshots/alma__infer__tests__infer_expr-29.snap
---
source: src/infer.rs
expression: "infer(\"{ {} | age = 1 }\")"

---
Input:

{ {} | age = 1 }

---
Output:

[1:2]

Type mismatch:  {}  ≠  { a | age : Float }

Expected

  1│  { {} | age = 1 }
   │    ↑↑

to be

{ a | age : Float }

but seems to be

{}
