src/snapshots/alma__infer__tests__infer_expr-3.snap
---
source: src/infer.rs
expression: "infer(r\"\\m -> \\n -> \\f -> \\x -> m f (n f x)\")"

---
Input:

\m -> \n -> \f -> \x -> m f (n f x)

---
Output:

(a -> b -> c) -> (a -> d -> b) -> a -> d -> c
