src/snapshots/alma__infer__tests__infer_expr-30.snap
---
source: src/infer.rs
expression: "infer(\"{ { age = 5 } | age = 1 }\")"

---
Input:

{ { age = 5 } | age = 1 }

---
Output:

{ age : Float }
