src/snapshots/alma__infer__tests__infer_expr-32.snap
---
source: src/infer.rs
expression: "infer(r\"\\thing -> { thing | age = 5 }\")"

---
Input:

\thing -> { thing | age = 5 }

---
Output:

{ a | age : Float } -> { a | age : Float }
